[gd_scene load_steps=5 format=3 uid="uid://bv2jb61ljkhrv"]

[ext_resource type="Script" uid="uid://dr3bdbnfa0utr" path="res://shared ui elements/ability list item/ability_list_item.gd" id="1_ae7er"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ae7er"]
bg_color = Color(0.96862745, 0.69803923, 0.23137255, 1)
border_width_bottom = 8
border_color = Color(0.22352941, 0.08235294, 0.07450981, 1)
corner_radius_top_left = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hy4hf"]
bg_color = Color(0.8745098, 0.8392157, 0.7921569, 1)
border_width_bottom = 8
border_color = Color(0.22352941, 0.08235294, 0.07450981, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p8k1q"]
bg_color = Color(0.16470589, 0.4, 0.44313726, 1)
border_width_bottom = 8
border_color = Color(0.22352941, 0.08235294, 0.07450981, 1)
corner_radius_top_right = 8
corner_radius_bottom_right = 8

[node name="AbilityListItem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ae7er")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Button"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="Button/HBoxContainer"]
custom_minimum_size = Vector2(75, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ae7er")

[node name="TargetsLabel" type="Label" parent="Button/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderLarge"

[node name="PanelContainer2" type="PanelContainer" parent="Button/HBoxContainer"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hy4hf")

[node name="VBoxContainer" type="VBoxContainer" parent="Button/HBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Button/HBoxContainer/PanelContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderMedium"

[node name="DescriptionLabel" type="Label" parent="Button/HBoxContainer/PanelContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="Button/HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_p8k1q")

[node name="UsesLabel" type="Label" parent="Button/HBoxContainer/PanelContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderLarge"
